added second paragrap for testing

--- a/home_page.html
+++ b/home_page.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>
-            Project
-        </title>
-    </head>
-    <body>
-        <p>this is body and works</p>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>
+        Project
+    </title>
+</head>
+
+<body>
+    <p>this is body and works</p>
+    <p>This is a secon paragraph</p>
+</body>
+
 </html>
