--- a/home_page.html
+++ b/home_page.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>
-            Project
-        </title>
-    </head>
-    <body>
-        <p>this is body and works</p>
-        <p>Just for a commit</p>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>
+        Project
+    </title>
+</head>
+
+<body>
+    <p>this is body and works</p>
+    <p>Just for a commit</p>
+    <p>change boody for a test
+    </p>
+</body>
+
 </html>
