--- a/home_page.html
+++ b/home_page.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>
-            Project
-        </title>
-    </head>
-    <body>
-        <p>this is body and works</p>
-        <p>Just for a commit</p>
-        <p>change boody for a test</p>
-        <p>please pull my changes before you start adding something</p>
-    </body>
+
+	<head>
+    		<meta charset="utf-8">
+    		<title>
+        		Project
+    		</title>
+	</head>
+	
+	<body>
+    		<p>this is body and works</p>
+    		<p>Just for a commit</p>
+    		<p>change boody for a test</p>
+    		<p>please pull my changes before you start adding something</p>
+    		<p>i pull your changes and add this paragraph</p>
+	</body>
+
 </html>
