Added header and footer for paragraphs

--- a/home_page.html
+++ b/home_page.html
@@ -3,13 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Project
+            Majestical
         </title>
     </head>
     <body>
-        <p>this is body and works</p>
-        <p>Just for a commit</p>
-        <p>change boody for a test</p>
-        <p>please pull my changes before you start adding something</p>
+        <header>
+            <p>this is a paragraph for heaeder </p>
+        </header>
+        <section>
+            <div>
+                
+            </div>
+        </section>
+        <footer>
+            <p>this is a paragraph for footer something</p>
+        </footer>
     </body>
 </html>
