--- a/home_page.html
+++ b/home_page.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="reset.css" type="text/css">
         <title>
             Majestical
         </title>
