--- a/login.html
+++ b/login.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="reset.css" type="text/css">
+        <meta charset="utf-8">
         <title>Login page </title>
     </head>
     <body>
