Added  pic to header

--- a/login.html
+++ b/login.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <header>
-            <p>This is a header</p>
+            <p>Header</p>
+            <img src="https://www.lorempixel.com/200/100" alt="header pic">
         </header>
         <div>
             <label><b>Username</b></label>
