--- a/login.html
+++ b/login.html
@@ -13,12 +13,14 @@
         <div>
             <label><b>Username</b></label>
             <input type="text" placeholder="Enter Username" required>  
+            
             <label><b>Password</b></label>
             <input type="password" placeholder="Enter Password" required>
             <button type="submit">Login</button>
             </div>
         <footer>
             <p>This is a footer</p>
+            <p>this is a second paragraph in footer</p>
         </footer>
     </body>
 </html>
