Improve home_page

--- a/home_page.html
+++ b/home_page.html
@@ -3,21 +3,92 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="reset.css" type="text/css">
+        <link rel="stylesheet" href="home-page-style.css" type="text/css">
         <title>
             Majestical
         </title>
     </head>
     <body>
-        <header>
-            <p>this is a paragraph for heaeder </p>
-        </header>
-        <section>
-            <div>
-                
-            </div>
-        </section>
-        <footer>
-            <p>this is a paragraph for footer something</p>
-        </footer>
+        <div class="container">
+            <header>
+                <div style="margin-left: 20px;">
+                    <p><a href="#">HOMEPAGE</a> | <a href="#">STYLE DEMO</a> | <a href="#">FULL WIDTH</a> | <a href="#">PORTFOLIO</a>| <a href="#">GALLERY</a> | <a href="#">DROPDOWN</a></p>
+                </div>
+            </header>
+            <section class="start-section" >
+                <div style="background-color: #252525;">
+                    <div style="display: flex; height: 110px; align-items: center;">
+                        <h2 style="color: white;">MAJESTICAL</h2>
+                        <p style="color: white;"> Free PSD Website Template</p>
+                        <input type="text" style="background-color: #252525;" name="search" placeholder="Search Our Website...">
+                        <input type="button" value="Search" name="submit-search-btn">
+                    </div>
+                    <div style="width: 960px; height: 340px; background-color: #3f3f3f; margin-left: 20px;">
+
+                    </div>
+                </div>
+                <div>
+                    <p>You are here >> HOMEPAGE</p>
+                </div>
+                <div>
+                    <h1 style="text-align: center; align-self: center;"> WELCOME TITLE</h1>
+                    <p>"There is just a simple partagtaph using this botom of the welcome totle to se if this is dilling correctly the page and there are enopuffh 
+                        words that we want to show that in two different lines
+                    </p>
+                    <hr>
+                    <table>
+                        <tr>
+                            <td> What people say about us</td>
+                            <td>Meet the team</td>
+                        </tr>
+                        <tr>
+                            <td>
+    dsadasdas
+                            </td>
+                            <td>
+    asddasd
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+    dasdassd
+                            </td>
+                            <td>
+    asdas
+                            </td>
+                        </tr>
+                    </table>
+                    <hr>
+                    <table>
+                        <tr>
+                            <td>dasdas</td> <td>dasdasdas</td> <td>asdasdasds</td> <td>dsadasdas</td>
+                        </tr>
+                    </table>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
+                        text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to 
+                        make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
+                        remaining essentially unchanged</h2>
+                </div>
+                <div>
+                    <table>
+                        <tr>
+                            <td>a</td><td>a</td><td>a</td><td>a</td>
+                        </tr>
+                        <tr>
+                            <td>a</td><td>a</td><td>a</td><td>a</td>
+                        </tr>
+                        <tr>
+                            <td>a</td><td>a</td><td>a</td><td>a</td>
+                        </tr>
+                        <tr>
+                            <td>a</td><td>a</td><td>a</td><td>a</td>
+                        </tr>
+                    </table>
+                </div>
+            </section>
+            <footer>
+                <p>te drejayt autoriale ketu eshte foorteanfnaskjfnakjsnjk</p>
+            </footer>
+        </div>
     </body>
 </html>
