--- a/home_page.html
+++ b/home_page.html
@@ -27,38 +27,49 @@
 
                     </div>
                 </div>
-                <div>
-                    <p>You are here >> HOMEPAGE</p>
+                <div style="background-color: #fe9900; height: 15px;">
+                    <div style="background-color: #ffff; width: 160px; height: 15px; margin-left: 180px;">
+
+                    </div>
+                </div>
+                <section style="background-color: #e1e1e1; ">
+                    <section style="margin-left: 20px; margin-right: 20px; background-color: #ffffff;">
+
+                    
+                    <section style="margin-left: 30px; margin-right: 30px; ">
+                
+                <div style="height: 55px; margin-left: -30px; margin-right: -30px; background-color: #f0f0f0; align-items: center; display: flex;">
+                    <p style="margin-left: 30px;">You are here &nbsp; >> &nbsp; HOMEPAGE</p>
                 </div>
                 <div>
-                    <h1 style="text-align: center; align-self: center;"> WELCOME TITLE</h1>
-                    <p>"There is just a simple partagtaph using this botom of the welcome totle to se if this is dilling correctly the page and there are enopuffh 
-                        words that we want to show that in two different lines
-                    </p>
-                    <hr>
-                    <table>
-                        <tr>
-                            <td> What people say about us</td>
-                            <td>Meet the team</td>
-                        </tr>
-                        <tr>
-                            <td>
-    dsadasdas
-                            </td>
-                            <td>
-    asddasd
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-    dasdassd
-                            </td>
-                            <td>
-    asdas
-                            </td>
-                        </tr>
-                    </table>
-                    <hr>
+                    <h1 style="text-align: center; font-size: 65px; margin-top: 45px;"> WELCOME TITLE</h1>
+                    <p style="font-size: 2rem; text-align: center;">"There is just a simple partagtaph using this botom of the welcome totle to se if this is dilli,,</p>
+                    <hr style="margin-top: 50px; margin-bottom: 50px;">
+                    <div>
+                        <table style="width: 100%;">
+                            <tr>
+                                <td> What people say about us</td>
+                                <td>Meet the team</td>
+                            </tr>
+                            <tr>
+                                <td>
+        dsadasdas
+                                </td>
+                                <td>
+        asddasd
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+        dasdassd
+                                </td>
+                                <td>
+        asdas
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <hr style="margin-top: 50px; margin-bottom: 50px;">
                     <table>
                         <tr>
                             <td>dasdas</td> <td>dasdasdas</td> <td>asdasdasds</td> <td>dsadasdas</td>
@@ -69,6 +80,9 @@
                         make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
                         remaining essentially unchanged</h2>
                 </div>
+            </section>
+            </section>
+            </section>
                 <div>
                     <table>
                         <tr>
