--- a/login.html
+++ b/login.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
+		
         <link rel="stylesheet" href="reset.css" type="text/css">
+		
         <meta charset="utf-8">
         <title>Login page </title>
+		
+		<style> 
+			body{
+			font-size: 20px
+			margin-top: 100px;
+			margin-bottom: 100px;
+			margin-right: 150px;
+			margin-left: 80px;
+			}
+			
+			header{
+			background-color: #3F3F3F;
+			margin: 40px;
+			
+			}
+			
+		</style>
     </head>
     <body>
+	<link rel="stylesheet1" href="home-page-style.css">
         <header>
             <p>Header</p>
             <img src="https://www.lorempixel.com/200/100" alt="header pic">
