Improve home_page

--- a/home_page.html
+++ b/home_page.html
@@ -46,28 +46,28 @@
                     <p style="font-size: 2rem; text-align: center;">"There is just a simple partagtaph using this botom of the welcome totle to se if this is dilli,,</p>
                     <hr style="margin-top: 50px; margin-bottom: 50px;">
                     <div>
-                        <table style="width: 100%;">
+                        <!-- <table style="width: 100%;">
                             <tr>
-                                <td> What people say about us</td>
-                                <td>Meet the team</td>
+                                <td colspan="2" style="font-size: 25px;"> What people say about us</td>
+                                <td colspan="2" style="font-size: 25px;">Meet the team</td>
                             </tr>
                             <tr>
-                                <td>
-        dsadasdas
-                                </td>
-                                <td>
-        asddasd
-                                </td>
+                                <td><img src="fotoHomePage/thonjezat.jpg" alt="thonjezat"></td>
+                                <td>Tommy Tanker - CEO</td>
+                                <td rowspan="2"><img src="https://lorempixel.com/man/110/110" alt="thonjezat"></td>
+                                <td>Ardian Syla - Fullstack</td>
+                                
                             </tr>
                             <tr>
-                                <td>
-        dasdassd
+                                <td colspan="2" style="width: 50%;">dsadsadasdasadsajdhjsahdashdhasdjhasjdhsjhdkjashdkahsdkhaskjdhaskjdhkjashdjkashkjdsadsadsadasdasdas
                                 </td>
                                 <td>
-        asdas
+                                    dajhdajkhdakj
                                 </td>
+                                <td>dajskdhaskdhjkash</td>
+                                <td>dajskdhaskdhjkash</td>
                             </tr>
-                        </table>
+                        </table> -->
                     </div>
                     <hr style="margin-top: 50px; margin-bottom: 50px;">
                     <table>
