Added divs at left for people sayings

--- a/home_page.html
+++ b/home_page.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="container">
-            <header>
+            <header style="display: flex; align-items: center;">
                 <div style="margin-left: 20px;">
                     <p><a href="#">HOMEPAGE</a> | <a href="#">STYLE DEMO</a> | <a href="#">FULL WIDTH</a> | <a href="#">PORTFOLIO</a>| <a href="#">GALLERY</a> | <a href="#">DROPDOWN</a></p>
                 </div>
@@ -45,29 +45,24 @@
                     <h1 style="text-align: center; font-size: 65px; margin-top: 45px;"> WELCOME TITLE</h1>
                     <p style="font-size: 2rem; text-align: center;">"There is just a simple partagtaph using this botom of the welcome totle to se if this is dilli,,</p>
                     <hr style="margin-top: 50px; margin-bottom: 50px;">
-                    <div>
-                        <!-- <table style="width: 100%;">
-                            <tr>
-                                <td colspan="2" style="font-size: 25px;"> What people say about us</td>
-                                <td colspan="2" style="font-size: 25px;">Meet the team</td>
-                            </tr>
-                            <tr>
-                                <td><img src="fotoHomePage/thonjezat.jpg" alt="thonjezat"></td>
-                                <td>Tommy Tanker - CEO</td>
-                                <td rowspan="2"><img src="https://lorempixel.com/man/110/110" alt="thonjezat"></td>
-                                <td>Ardian Syla - Fullstack</td>
-                                
-                            </tr>
-                            <tr>
-                                <td colspan="2" style="width: 50%;">dsadsadasdasadsajdhjsahdashdhasdjhasjdhsjhdkjashdkahsdkhaskjdhaskjdhkjashdjkashkjdsadsadsadasdasdas
-                                </td>
-                                <td>
-                                    dajhdajkhdakj
-                                </td>
-                                <td>dajskdhaskdhjkash</td>
-                                <td>dajskdhaskdhjkash</td>
-                            </tr>
-                        </table> -->
+                    <div style="margin-bottom: 20px; height:fit-content; display: flex;">
+                        <div style="width: 440px; float: left; word-break: break-all; margin-right: 10px;">
+                            <div style="margin-bottom: 50px; height: fit-content;">
+                                <p> What People Say About Us</p>
+                                <p style="align-items: center; display: flex;"> <img src="fotoHomePage/thonjezat.jpg" alt="thonjezat"> <b>Tommy Tanker</b> - CEO </p>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly</p>
+                            </div>
+                            <div style="margin-bottom: 10px;">
+                                <p> What People Say About Us</p>
+                                <p style="align-items: center; display: flex;"> <img src="fotoHomePage/thonjezat.jpg" alt="thonjezat"> <b>Tommy Tanker</b> - CEO </p>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly</p>
+                            </div>
+                        </div>
+                        <div style="width: 440px; float: right; word-break: break-all; margin-left: 10px;">
+                            <p> ketu i kemi 60 dsadjsahdjhdjsahdjhajdhasjhdjahdjahjdhsajhdjashdjsahdjahjhajshdjsahjasja</p>
+                            <p>sadsadasdasdad</p>
+                            <p>sadasdsadasdasdasd</p>
+                        </div>
                     </div>
                     <hr style="margin-top: 50px; margin-bottom: 50px;">
                     <table>
@@ -83,22 +78,6 @@
             </section>
             </section>
             </section>
-                <div>
-                    <table>
-                        <tr>
-                            <td>a</td><td>a</td><td>a</td><td>a</td>
-                        </tr>
-                        <tr>
-                            <td>a</td><td>a</td><td>a</td><td>a</td>
-                        </tr>
-                        <tr>
-                            <td>a</td><td>a</td><td>a</td><td>a</td>
-                        </tr>
-                        <tr>
-                            <td>a</td><td>a</td><td>a</td><td>a</td>
-                        </tr>
-                    </table>
-                </div>
             </section>
             <footer>
                 <p>te drejayt autoriale ketu eshte foorteanfnaskjfnakjsnjk</p>
