Add footer for home page

--- a/home_page.html
+++ b/home_page.html
@@ -59,29 +59,113 @@
                             </div>
                         </div>
                         <div style="width: 440px; float: right; word-break: break-all; margin-left: 10px;">
-                            <p> ketu i kemi 60 dsadjsahdjhdjsahdjhajdhasjhdjahdjahjdhsajhdjashdjsahdjahjhajshdjsahjasja</p>
-                            <p>sadsadasdasdad</p>
-                            <p>sadasdsadasdasdasd</p>
+                            <div style="margin-bottom: 50px; height: fit-content;">
+                                <p> What People Say About Us</p>
+                                <div style="display: flex;">
+                                    <p style="align-items: center; display: flex;"> <img src="fotoHomePage/thonjezat.jpg" width="110" height="110" alt="foto" srcset="">
+                                        <div style="display: block;">
+                                            <p style="font-weight: bold;">Persons name here</p>
+                                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly</p>
+                                        </div>
+                                    </p>
+                                </div>
+                             </div>
+                            <div style="margin-bottom: 50px; height: fit-content;">
+                                <div style="display: flex;">
+                                    <p style="align-items: center; display: flex;"> <img src="fotoHomePage/thonjezat.jpg" width="110" height="110" alt="foto" srcset="">
+                                        <div style="display: block;">
+                                            <p style="font-weight: bold;">Persons name here</p>
+                                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly</p>
+                                        </div>
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <hr style="margin-top: 50px; margin-bottom: 50px;">
                     <table>
                         <tr>
-                            <td>dasdas</td> <td>dasdasdas</td> <td>asdasdasds</td> <td>dsadasdas</td>
+                            <td style="width: 220px;">
+                                <p><b>Latest work</b></p>
+                                <p style="word-break: break-all;">Justouhsadjkdhjksahdkjasjfkkfjnsdkjfnakdjnfkjanfkjanskjnakjnkajsn</p>
+                            </td>
+                            <td style="width: 220px;">
+                                <img src="fotoHomePage/thonjezat.jpg" width="210" height="140" alt="">
+                                <p>asdjlskajhjdkjsahdjkashjkdhjad as dsad asd sa skhdkjas</p>
+                                <a href="#"> wiew this ahjkashfkj</a>
+                            </td>
+                            <td style="width: 220px;">
+                                <img src="fotoHomePage/thonjezat.jpg" width="210" height="140" alt="">
+                                <p>asdjlskajhjdkjsahdjkashjdsadsadas kdhjaskhddasd as  das  kjas</p>
+                                <a href="#"> wiew this ahjkashfkj</a>
+                            </td>
+                            <td style="width: 220px;">
+                                <img src="fotoHomePage/thonjezat.jpg" width="210" height="140" alt="">
+                                <p style="word-break: break-all;">asdjlskajhjdkjsahddsad a as as sajkashjkfds fd dhjaskhdkjas</p>
+                                <a href="#"> wiew this ahjkashfkj</a>
+                            </td>
                         </tr>
                     </table>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
-                        text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to 
-                        make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
-                        remaining essentially unchanged</h2>
+                    <div style="display: flex;">
+                        <img src="fotoHomePage/thonjezat.jpg" alt="">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
+                            text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to 
+                            make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, 
+                            remaining essentially unchanged</p>
+                    </div>
                 </div>
             </section>
             </section>
             </section>
             </section>
-            <footer>
-                <p>te drejayt autoriale ketu eshte foorteanfnaskjfnakjsnjk</p>
+            <footer class="footerDiv">
+                <div style="display: flex; height: 216px; margin: 0px 20px 0px 20px">
+                    <div style="width: 245px;">
+                        <p>CONTACT DETAILS</p>
+                        <p>Company Name</p>
+                        <p>Street name & number</p>
+                        <p>Town</p>
+                        <p>Postcode/Zip</p>
+                        <p>Tel: xxx x xxxxx x x xx x xxxx x x</p>
+                        <p>Fax</p>
+                        <p>Email</p>
+                    </div>
+                    <div>   
+                        <p>CONTACT DETAILS</p>
+                        <p>Company Name</p>
+                        <p>Street name & number</p>
+                        <p>Town</p>
+                        <p>Postcode/Zip</p>
+                        <p>Tel: xxx x xxxxx x x xx x xxxx x x</p>
+                        <p>Fax</p>
+                        <p>Email</p>
+                    </div>
+                    <div>
+                        <p>CONTACT DETAILS</p>
+                        <p>Company Name</p>
+                        <p>Street name & number</p>
+                        <p>Town</p>
+                        <p>Postcode/Zip</p>
+                        <p>Tel: xxx x xxxxx x x xx x xxxx x x</p>
+                        <p>Fax</p>
+                        <p>Email</p>
+                    </div>
+                    <div>
+                        <p>CONTACT DETAILS</p>
+                        <p>Company Name</p>
+                        <p>Street name & number</p>
+                        <p>Town</p>
+                        <p>Postcode/Zip</p>
+                        <p>Tel: xxx x xxxxx x x xx x xxxx x x</p>
+                        <p>Fax</p>
+                        <p>Email</p>
+                    </div>
+                </div>
+                <div style="height: 60px; background-color: #252525;">
+                    <p>copyright</p>
+                </div>
             </footer>
+    
         </div>
     </body>
 </html>
