--- a/home_page.html
+++ b/home_page.html
@@ -12,16 +12,16 @@
         <div class="container">
             <header style="display: flex; align-items: center;">
                 <div style="margin-left: 20px;">
-                    <p><a href="#">HOMEPAGE</a> | <a href="#">STYLE DEMO</a> | <a href="#">FULL WIDTH</a> | <a href="#">PORTFOLIO</a>| <a href="#">GALLERY</a> | <a href="#">DROPDOWN</a></p>
+                    <p><a href="#">HOMEPAGE</a>  |  <a href="#">STYLE DEMO</a>  |  <a href="#">FULL WIDTH</a>  |  <a href="#">PORTFOLIO</a>  |  <a href="#">GALLERY</a>  |  <a href="#">DROPDOWN</a></p>
                 </div>
             </header>
             <section class="start-section" >
                 <div style="background-color: #252525;">
                     <div style="display: flex; height: 110px; align-items: center;">
-                        <h2 style="color: white;">MAJESTICAL</h2>
-                        <p style="color: white;"> Free PSD Website Template</p>
-                        <input type="text" style="background-color: #252525;" name="search" placeholder="Search Our Website...">
-                        <input type="button" value="Search" name="submit-search-btn">
+                        <h2 style="color: white; font-size: 30px; margin-left: 20px; margin-right: 20px;">AlgoTech</h2>
+                        <p style="color: white; margin-top: 10px;">Pajisuni me kompjuterin më të mirë</p>
+                        <input type="text" style="margin-left: 260px; border-radius: 0px;" class="footerButton" name="search" placeholder="Kërkoni këtu...">
+                        <input type="button" value="Search" class="search-btn" name="submit-search-btn">
                     </div>
                     <div style="width: 960px; height: 340px; background-color: #3f3f3f; margin-left: 20px;">
 
@@ -120,49 +120,41 @@
             </section>
             <footer class="footerDiv">
                 <div style="display: flex; height: 216px; margin: 0px 20px 0px 20px">
-                    <div style="width: 245px;">
-                        <p>CONTACT DETAILS</p>
-                        <p>Company Name</p>
-                        <p>Street name & number</p>
-                        <p>Town</p>
-                        <p>Postcode/Zip</p>
-                        <p>Tel: xxx x xxxxx x x xx x xxxx x x</p>
-                        <p>Fax</p>
-                        <p>Email</p>
+                    <div style="width: 225px; margin-right: 20px;   ">
+                        <p class="headParagraph">KONTAKTI</p>
+                        <p>Algo Tech</p>
+                        <p>Rr.Zahir Pajaziti, 10000</p>
+                        <p>Kosova</p>
+                        <p>42000</p>
+                        <p>Tel: +383 (0) 44 123 123</p>
+                        <p>Fax: +383 (0) 44 123 123</p>
+                        <p>Email: ardianbsyla@gmail.com</p>
                     </div>
-                    <div>   
-                        <p>CONTACT DETAILS</p>
-                        <p>Company Name</p>
-                        <p>Street name & number</p>
-                        <p>Town</p>
-                        <p>Postcode/Zip</p>
-                        <p>Tel: xxx x xxxxx x x xx x xxxx x x</p>
-                        <p>Fax</p>
-                        <p>Email</p>
+                    <div style="width: 225px; margin-right: 20px;">   
+                        <p class="headParagraph">LINQE TE SHPEJTA</p>
+                        <p><a href="http://www.facebook.com">Facebook</a></p><hr>
+                        <p><a href="http://www.twitter.com">Twitter</a></p><hr>
+                        <p><a href="http://www.linkedin.com">Linkedin</a></p><hr>
+                        <p><a href="http://www.youtube.com">Youtube</a></p><hr>
                     </div>
-                    <div>
-                        <p>CONTACT DETAILS</p>
-                        <p>Company Name</p>
-                        <p>Street name & number</p>
-                        <p>Town</p>
-                        <p>Postcode/Zip</p>
-                        <p>Tel: xxx x xxxxx x x xx x xxxx x x</p>
-                        <p>Fax</p>
-                        <p>Email</p>
+                    <div style="width: 225px; margin-right: 20px;">
+                        <p class="headParagraph">NGA FAQJA</p>
+                        <p style="font-size: 15px;"><b>Zbritje në Algo Tech</b></p>
+                        <p>Postuar nga Gashi.</p>
+                        <p style="margin-top: 8px; margin-bottom: 8px;">Këtë javë kemi zbritje të madhe në Algo Tech. Zbritja përfshinë shumë produkte të shumë kërkuara.</p>
+                        <a style="float: right; font-size: 12px;" href="#">Lexoni më shumë >></a>
                     </div>
-                    <div>
-                        <p>CONTACT DETAILS</p>
-                        <p>Company Name</p>
-                        <p>Street name & number</p>
-                        <p>Town</p>
-                        <p>Postcode/Zip</p>
-                        <p>Tel: xxx x xxxxx x x xx x xxxx x x</p>
-                        <p>Fax</p>
-                        <p>Email</p>
+                    <div style="width: 225px; margin-right: 20px;">
+                        <p class="headParagraph">MERRNI NJOFTIMET TONA</p>
+                        <form action="#" method="post">
+                            <input type="text" placeholder=" Emri:" class="footerButton">
+                            <input type="email" name="" id="" placeholder=" Email:" class="footerButton" style="margin-top: 15px;">
+                            <input type="submit" value="SUBMIT" class="footerSubmitButton">
+                        </form>
                     </div>
                 </div>
-                <div style="height: 60px; background-color: #252525;">
-                    <p>copyright</p>
+                <div style="display: flex; align-items: center; height: 60px; background-color: #000000;">
+                    <p style="margin-left: 20px;">Copyright &copy; 2020 - All Rights Reserved - Algo Tech</p>
                 </div>
             </footer>
     
