Add styles for homepage

--- a/home_page.html
+++ b/home_page.html
@@ -12,10 +12,17 @@
         <div class="container">
             <header style="display: flex; align-items: center;">
                 <div style="margin-left: 20px;">
-                    <p style="font-size: 20px;"><a href="#">HOMEPAGE</a>  |  <a href="#">STYLE DEMO</a>  |  <a href="#">FULL WIDTH</a>  |  <a href="#">PORTFOLIO</a>  |  <a href="#">GALLERY</a>  |  <a href="#">DROPDOWN</a></p>
+                    <p style="font-size: 15px;"><a href="#" class="footerSubmitButton stylesBtn"> HOMEPAGE</a>  |  
+                        <a href="#" class="footerSubmitButton stylesBtn">STYLE DEMO</a>  |  
+                        <a href="#" class="footerSubmitButton stylesBtn">FULL WIDTH</a>  |  
+                        <a href="#" class="footerSubmitButton stylesBtn">PORTFOLIO</a>  |  
+                        <a href="#" class="footerSubmitButton stylesBtn">GALLERY</a>  |  
+                        <a href="#" class="footerSubmitButton stylesBtn">DROPDOWN</a>
+                    </p>
+                    
                 </div>
             </header>
-            <section class="start-section" >
+            <section class="start-section" id="">
                 <div style="background-color: #252525;">
                     <div style="display: flex; height: 110px; align-items: center;">
                         <h2 style="color: white; font-size: 30px; margin-left: 20px; margin-right: 20px;">AlgoTech</h2>
@@ -24,7 +31,7 @@
                         <input type="button" value="Search" class="search-btn" name="submit-search-btn">
                     </div>
                     <div style="width: 960px; height: 340px; background-color: #3f3f3f; margin-left: 20px;">
-
+                        <img src="fotoHomePage/desktop-setup-art.jpg" alt="desktop setup" width="960" height="340">
                     </div>
                 </div>
                 <div style="background-color: #fe9900; height: 15px;">
@@ -86,7 +93,7 @@
                         <tr>
                             <td style="width: 200px; display: block; margin-right: 20px;">
                                 <p style="color: #666666; font-size: 25px; margin-bottom: 20px;"> Punët e fundit</p>
-                                <p style="word-break: break-word; font-size: 15px;">Së fundi kanë ardhur shumë produkte cilësore nga brendet më të mira. </p>
+                                <p style="word-break: break-word; font-size: 15px;">Së fundi kanë ardhur shumë produkte cilësore nga brendet më të mëdha. </p>
                             </td>
                             <td style="width: 210px; padding-right: 30px;">
                                 <img src="fotoHomePage/Computer0.jpg" width="210" height="140" alt="kompjuter" style="margin-bottom: 10px;">
