Added css files into a folder

--- a/home_page.html
+++ b/home_page.html
@@ -2,19 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="reset.css" type="text/css">
-        <link rel="stylesheet" href="home-page-style.css" type="text/css">
+        <link rel="stylesheet" href="css/reset.css" type="text/css">
+        <link rel="stylesheet" href="css/home-page-style.css" type="text/css">
         
-        <title>
-            Majestical
-        </title>
+        <title>AlgoTech</title>
     </head>
     <script src="script/home-page.js"></script>
     <body>
         <div class="container">
             <header style="display: flex; align-items: center;">
                 <div style="margin-left: 20px;">
-                    <p style="font-size: 15px;"><a href="#" class="footerSubmitButton stylesBtn"> HOMEPAGE</a>  |  
+                    <p style="font-size: 15px;">
+                        <a href="#" class="footerSubmitButton stylesBtn"> HOMEPAGE</a>  |  
                         <a href="#" class="footerSubmitButton stylesBtn">STYLE DEMO</a>  |  
                         <a href="#" class="footerSubmitButton stylesBtn">FULL WIDTH</a>  |  
                         <!-- <a href="#" class="footerSubmitButton stylesBtn">PORTFOLIO</a>  |   -->
@@ -56,7 +55,7 @@
                     <div style="display: flex; height: 110px; align-items: center;">
                         <h2 style="color: white; font-size: 30px; margin-left: 20px; margin-right: 20px;">AlgoTech</h2>
                         <p style="color: white; margin-top: 10px;">Pajisuni me kompjuterin më të mirë</p>
-                        <input type="text" style="margin-left: 260px; border-radius: 0px;" class="footerButton" name="search" placeholder="Kërkoni këtu...">
+                        <input type="text" style="margin-left: 355px; border-radius: 0px;" class="footerButton" name="search" placeholder="Kërkoni këtu...">
                         <input type="button" value="Search" class="search-btn" name="submit-search-btn">
                     </div>
                     <div style="width: 960px; height: 340px; background-color: #3f3f3f; margin-left: 20px;">
@@ -87,7 +86,7 @@
                     <p style="margin-left: 30px;">You are here &nbsp; >> &nbsp; HOMEPAGE</p>
                 </div>
                 <div>
-                    <h1 style="text-align: center; font-size: 65px; margin-top: 45px; color: #dddddd;"> MIRË SE VINI NË ALGOTECH</h1>
+                    <h1 style="text-align: center; font-size: 65px; margin-top: 45px; color: #dddddd; font-style: normal;"> MIRË SE VINI NË ALGOTECH</h1>
                     <p style="font-size: 2rem; text-align: center;">AlgoTech është dyqani më i madh online në Kosovë, Shqipëri dhe rajon për produkte teknologjike, me mbi 60.000 produkte nga brendet më të njohura botërore.</p>
                     <hr style="margin-top: 50px; margin-bottom: 50px;">
                     <div style="margin-bottom: 20px; height:fit-content; display: flex;">
@@ -152,7 +151,7 @@
                     </table>
                     <div style="display: flex; height: auto; padding-bottom: 30px; align-items: center;">
                         <img src="images/twitterPage.jpg" alt="twiiterImageOfLogo" style="margin-right: 20px;">
-                        <p style="font-size: 20px;">Mund të na gjeni edhe në llogarinë tonë në Twitter, ku mund të shikoni postimet tona në mënyrë që të njoftoheni me kohë për produktet me zbritje.</p>
+                        <p style="font-size: 20px; align:left;">Mund të na gjeni edhe në llogarinë tonë në <u><i>Twitter</i></u>, ku mund të shikoni postimet tona në mënyrë që të njoftoheni me kohë për produktet me zbritje.</p>
                     </div>
                 </div>
             </section>
