--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/home-page-style.css" type="text/css">
         <link rel="stylesheet" href="css/login-page-style.css" type="text/css">
         <title>
-            Majestical
+            KYÇU
         </title>
     </head>
     <body>
@@ -21,9 +21,6 @@
                         <a href="#" class="footerSubmitButton stylesBtn">GALLERY</a>  |  
                         <a href="#" class="footerSubmitButton stylesBtn">DROPDOWN</a>
                     </p>
-
-                    
-                    
                 </div>
                 <div class="icons">
                     <a
