Fixes in form of Login and SignUp

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,9 +18,11 @@
                         <a href="#" class="footerSubmitButton stylesBtn">STYLE DEMO</a>  |  
                         <a href="#" class="footerSubmitButton stylesBtn">FULL WIDTH</a>  |  
                         <!-- <a href="#" class="footerSubmitButton stylesBtn">PORTFOLIO</a>  |   -->
-                        <a href="#" class="footerSubmitButton stylesBtn">GALLERY</a>  |  
-                        <a href="#" class="footerSubmitButton stylesBtn">DROPDOWN</a>
+                        <a href="./login.html" target="_blank" class="footerSubmitButton stylesBtn">LOG IN</a>  |  
+                        <a href="./aboutUs.html" class="footerSubmitButton stylesBtn">ABOUT US</a>
                     </p>
+
+                    
                 </div>
                 <div class="icons">
                     <a
