--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
                     <div style="width: 960px; height: auto; background-color: #3f3f3f; margin-left: 20px; padding-bottom: 50px;">
                         <br>
                         <br>
-                        <div style="margin-left: 100px;" >
+                        <div style="margin-left: 50px;" >
                             <table>
                                 <tr>
                                     <td>
@@ -69,11 +69,11 @@
                                         <form action="#" method="post" style="margin-top: 400x;">
                                             <p style="margin-left: 185px;">KYÇUNI</p>
                                             <div style="margin: 40px;">
-                                                <p style="font-size: 18px;">Emri i perdoruesit :<input type="text" placeholder=" Username" class="footerButton" background style="width: 200px; margin-left: 20px; background-color: aliceblue;"></p>
-                                            </div>
-                                            
-                                            <div style="margin: 40px;">
-                                                <p style="font-size: 18px;">Fjalkalimi :<input type="password" placeholder=" Pasword" minlength="8" required class="footerButton" background style="width: 200px; margin-left: 85px; background-color: aliceblue;"></p>
+                                                <!-- <p style="font-size: 18px;">Emri i perdoruesit :<input type="text" placeholder=" Username" class="footerButton" background style="width: 200px; margin-left: 20px; background-color: aliceblue;"></p> -->
+                                                <label for="username" style="display: table-cell; color:#868686;">Emri i perdoruesit: <input type="text" placeholder=" Username" class="footerButton" background style="width: 200px; ; background-color: aliceblue; margin-left: 20px;"> </label>
+                                            <div >
+                                                <label for="username" style="display: table-cell; color:#868686;">Fjalkalimi: <input type="password" placeholder=" Pasword" minlength="8" required class="footerButton" background style="width: 200px;  background-color: aliceblue; margin-left: 80px;"> </label>
+                                                <!-- <p style="font-size: 18px;">Fjalkalimi :<input type="password" placeholder=" Pasword" minlength="8" required class="footerButton" background style="width: 200px; margin-left: 85px; background-color: aliceblue;"></p> -->
                                             </div>
                                             <input type="submit" value="Kyçuni" class="Login-btn" style="margin-left: 280px; ">
                                         </form>
