--- a/product.html
+++ b/product.html
@@ -119,10 +119,10 @@
                             <td><img src="images/1.jpg" alt="mac_book-image" width="300px" style="margin: 20px;"></td>
                             <td rowspan="2"><p>Detajet teknike:</p>
                                 <div class="product-table">
-                                    <table  style="border: 1px solid black; width: 500px;">
+                                    <table  style="border: 1px solid black; width: 500px;" cellspacing="10" cellspacing="5">
                                         <tr>
-                                            <th>Pershkrimi</td>
-                                            <th>Rezultati</td>
+                                            <th style="background-color: #fe9900;padding: 5px;">Pershkrimi</td>
+                                            <th style="background-color: #fe9900; padding: 5px;">Rezultati</td>
                                         </tr>
                                         <tr> <td>Bluetooth</td><td>PO</td></tr>
                                         <tr> <td>Diagonalja e ekranit</td><td>16"/td></tr>
