--- a/products.html
+++ b/products.html
@@ -89,7 +89,7 @@
                         <table>
                             <tr>
                                 <td style="width: 200px; padding-right: 20px;">
-                                    <img src="images/Computer0.jpg" width="270"  alt="kompjuter" style="margin-bottom: 10px;">
+                                    <img src="images/Computer0.jpg" width="270"  alt="kompjuter" style="margin-bottom: 10px; ">
                                     <p style="margin-bottom: 10px;">Laptop Lenovo IdeaPad 5 14IIL05, 14'', Intel Core i7, 16GB RAM, 1TB SSD, Intel Iris Plus Graphics, i hirtë</p>
                                     <a href="#"> Shikoni më shumë</a>
                                 </td><td style="width: 200px; padding-right: 20px;">
@@ -109,12 +109,12 @@
                                     <p style="margin-bottom: 10px;">Monitor Samsung LC49HG90DMUXEN, 49", 144Hz, hirtë, zi</p>
                                     <a href="#"> Shikoni më shumë</a>
                                 </td><td style="width: 200px; padding-right: 20px;">
-                                    <img src="images/Karrige0.jpg" width="80px"  alt="kompjuter" style="margin-bottom: 10px;">
+                                    <img src="images/Karrige0.jpg" width="80px"  alt="kompjuter" style="margin-bottom: 10px; margin-left: 90px;">
                                     <p style="margin-bottom: 10px;">Karrige Nitro Concepts E250, gaming, e zezë/kuqe</p>
                                     <a href="#"> Shikoni më shumë</a>
                                 </td>
                                 <td style="width: 200px; padding-right: 20px;">
-                                    <img src="images/Timon.jpg" width="110"  alt="kompjuter" style="margin-bottom: 10px;">
+                                    <img src="images/Timon.jpg" width="110"  alt="kompjuter" style="margin-bottom: 10px; margin-left: 80px;">
                                     <p style="margin-bottom: 10px;">Mbajtëse për timon Thrustmaster TS-PC / T-GT / TS-XW dhe T150 Pro Racing Wheels</p>
                                     <a href="#"> Shikoni më shumë</a>
                                 </td>
@@ -125,7 +125,7 @@
                                     <p style="margin-bottom: 10px;">Tastierë CONNECT IT CI-1129, e zezë</p>
                                     <a href="#"> Shikoni më shumë</a>
                                 </td><td style="width: 200px; padding-right: 20px;">
-                                    <img src="images/Ore.jpg" width="200"  alt="ore" style="margin-bottom: 10px;">
+                                    <img src="images/Ore.jpg" width="200"  alt="ore" style="margin-bottom: 10px;margin-left: 30px;">
                                     <p style="margin-bottom: 10px;">Orë smart GARMIN Vívoactive 4, e argjendtë/hirtë</p>
                                     <a href="#"> Shikoni më shumë</a>
                                 </td>
