Add css for pages

--- a/login.html
+++ b/login.html
@@ -14,12 +14,11 @@
             <header style="display: flex; align-items: center;">
                 <div style="margin-left: 20px;">
                     <p style="font-size: 15px;">
-                        <a href="#" class="footerSubmitButton stylesBtn"> HOMEPAGE</a>  |  
-                        <a href="#" class="footerSubmitButton stylesBtn">STYLE DEMO</a>  |  
-                        <a href="#" class="footerSubmitButton stylesBtn">FULL WIDTH</a>  |  
-                        <!-- <a href="#" class="footerSubmitButton stylesBtn">PORTFOLIO</a>  |   -->
-                        <a href="#" class="footerSubmitButton stylesBtn">GALLERY</a>  |  
-                        <a href="#" class="footerSubmitButton stylesBtn">DROPDOWN</a>
+                        <a href="home_page.html" class="footerSubmitButton stylesBtn"> HOMEPAGE</a>  |  
+                        <a href="products.html" class="footerSubmitButton stylesBtn">PRODUCTS</a>  |  
+                        <a href="aboutUs.html" class="footerSubmitButton stylesBtn">ABOUT US</a>  |  
+                        <a href="login.html" class="footerSubmitButton stylesBtn">LOG IN</a>  |  
+                        <a href="signup.html" class="footerSubmitButton stylesBtn">SIGN UP</a>
                     </p>
                 </div>
                 <div class="icons">
