--- a/product.html
+++ b/product.html
@@ -135,10 +135,9 @@
                                         <tr> <td>Standardet Wi-Fi</td><td> A/b/g/n/ac</td></tr>
                                         <tr> <td>Lloji i memories</td><td>LPDDR4</td></tr>
                                         <tr> <td>Lloji i procesorit </td><td>PO</td></tr>
-                                        <tr> <td>Tastier me ndriçim/td><td>PO</td></tr>
+                                        <tr> <td>Tastier me ndriçim</td><td>PO</td></tr>
                                         <tr> <td>Lexues i shenjave të gishtërinjëve</td><td>PO</td></tr>
                                         <tr> <td>Gjerësia mm</td><td>357,9</td></tr>
-                                        
                                     </table>
                                 </div>
                                
