--- a/signup.html
+++ b/signup.html
@@ -51,8 +51,8 @@
             <section class="start-section" >
                 <div style="background-color: #252525;">
                     <div style="display: flex; height: 110px; align-items: center;">
-                        <h2 style="color: white; font-size: 30px; margin-left: 20px; margin-right: 20px;">AlgoTech</h2>
-                        <p style="color: white; margin-top: 10px;">Pajisuni me kompjuterin më të mirë</p>
+                        <h2>AlgoTech</h2>
+                        <p>Pajisuni me kompjuterin më të mirë</p>
                         <input type="text" style="margin-left: 260px; border-radius: 0px;" class="footerButton" name="search" placeholder="Kërkoni këtu...">
                         <input type="button" value="Search" class="search-btn" name="submit-search-btn">
                     </div>
